<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultActivity">

  <TextView
      android:id="@+id/textView_player"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="240dp"
      android:text="@string/result_text_player"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView_points"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="56dp"
      android:text="@string/result_text_points"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView_player" />

  <TextView
      android:id="@+id/textView_turns"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="68dp"
      android:text="@string/result_text_turns"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView_points" />

  <Button
      android:id="@+id/button_home"
      android:layout_width="316dp"
      android:layout_height="42dp"
      android:layout_marginTop="204dp"
      android:onClick="onHome"
      android:text="@string/button_home"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView_turns" />
</androidx.constraintlayout.widget.ConstraintLayout>